--- a/src/widgets/screeninstructions.kv
+++ b/src/widgets/screeninstructions.kv
@@ -19,7 +19,7 @@
                 size_hint_y: None
                 height: self.minimum_height
 
-                Label:
+                MDLabel:
                     text: root.instruction_msg
                     markup: True
                     text_size: root.width, None
