--- a/src/widgets/screenconsents.kv
+++ b/src/widgets/screenconsents.kv
@@ -2,22 +2,19 @@
 #:kivy 1.11.1
 
 <ScreenConsentCircleTask>:  # When adding new consent forms, to share style add class like so: <ConsentOne, ConsentTwo>:
-    settings: app.settings
     on_leave: consent_scroll.scroll_y = 1
 
-    BoxLayout:
-        orientation: 'vertical'
+    MDGridLayout:
+        cols: 1
 
         ScrollView:
             id: consent_scroll
             do_scroll_x: False
             do_scroll_y: True
 
-            GridLayout:
+            MDGridLayout:
                 cols: 1
-                rows: 3
-                size_hint_y: None
-                height: self.minimum_height
+                adaptive_height: True
                 padding: [0, 10, 0, 100]
                 spacing: [0, 20]
 
@@ -41,7 +38,7 @@
                     halign: 'center'
                     valign: 'middle'
                 MDLabel:
-                    text: app.settings.user
+                    text: app.settings.user_id
                     markup: False
                     text_size: root.width, None
                     font_size: sp(24)
@@ -51,18 +48,27 @@
                     halign: 'center'
                     valign: 'bottom'
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y: 0.2
-            RoundedButton:
+        MDSeparator:
+
+        MDBoxLayout:
+            spacing: 10
+            padding: 10, 10
+            size_hint_y: None
+            height: self.minimum_height
+            valign: 'middle'
+            halign: 'right'
+            Widget:  # Push buttons to the right.
+            MDRectangleFlatButton:
                 text: _("Decline")
+                font_size: 24
                 on_release:
                     root.manager.transition.direction = 'up'
                     root.manager.transition.duration = 0.5
                     root.manager.go_home()
-            RoundedButton:
+            MDRaisedButton:
                 text: _("Agree")
+                font_size: 24
                 on_release:
                     root.manager.transition.direction = 'up'
                     root.manager.transition.duration = 0.5
-                    root.manager.current = root.manager.task_instructions[app.settings.task]
+                    root.manager.current = root.manager.task_instructions[app.settings.current_task]
