--- a/src/widgets/screenconsents.kv
+++ b/src/widgets/screenconsents.kv
@@ -38,7 +38,7 @@
                     halign: 'center'
                     valign: 'middle'
                 MDLabel:
-                    text: app.settings.user_id
+                    text: app.settings.current_user
                     markup: False
                     text_size: root.width, None
                     font_size: sp(24)
