--- a/src/widgets/screensgeneral.kv
+++ b/src/widgets/screensgeneral.kv
@@ -65,7 +65,7 @@
             halign: 'center'
             valign: 'middle'
         MDLabel:
-            text: "[b]" + _("Personal Identifier:") + "[/b]\n" + app.settings.user_id
+            text: "[b]" + _("Personal Identifier:") + "[/b]\n" + app.settings.current_user
             markup: True
             text_size: root.width, None
             size: self.texture_size
