--- a/src/widgets/screensgeneral.kv
+++ b/src/widgets/screensgeneral.kv
@@ -20,7 +20,7 @@
         orientation: 'vertical'
 
         MDToolbar:
-            title: "Navigation Drawer"
+            title: _("MENU")
             elevation: 10
             left_action_items: [['menu', lambda x: root.manager.sidebar.set_state()]]
 
