also use bars to scroll

--- a/src/widgets/screenconsents.kv
+++ b/src/widgets/screenconsents.kv
@@ -6,11 +6,14 @@
 
     MDGridLayout:
         cols: 1
+        padding: 10, 10
+        spacing: 10
 
         ScrollView:
             id: consent_scroll
             do_scroll_x: False
             do_scroll_y: True
+            scroll_type: ['bars', 'content']
 
             MDGridLayout:
                 cols: 1
