--- a/src/widgets/screeninstructions.kv
+++ b/src/widgets/screeninstructions.kv
@@ -14,6 +14,7 @@
             id: instruct_scroll
             do_scroll_x: False
             do_scroll_y: True
+            scroll_type: ['bars', 'content']
 
             MDGridLayout:
                 cols: 1
