--- a/src/widgets/screensgeneral.kv
+++ b/src/widgets/screensgeneral.kv
@@ -28,6 +28,7 @@
             id: home_scroll
             do_scroll_x: False
             do_scroll_y: True
+            scroll_type: ['bars', 'content']
 
             MDLabel:
                 text: root.home_msg
