--- a/src/widgets/screensgeneral.kv
+++ b/src/widgets/screensgeneral.kv
@@ -22,7 +22,7 @@
         MDToolbar:
             title: _("MENU")
             elevation: 10
-            left_action_items: [['menu', lambda x: root.manager.sidebar.set_state()]]
+            left_action_items: [['menu', lambda instance: root.manager.sidebar.set_state()]]
 
         ScrollView:
             id: home_scroll
