--- a/src/widgets/screeninstructions.kv
+++ b/src/widgets/screeninstructions.kv
@@ -3,7 +3,7 @@
 
 <ScreenInstructCircleTask>:  # When adding new task instruction, to share style add class like so: <TaskOne, TaskTwo>:
     settings: app.settings
-    on_leave: instruct_scroll.scroll_y = 1
+    on_leave: scroll.scroll_y = 1
 
     MDGridLayout:
         cols: 1
@@ -11,7 +11,7 @@
         spacing: 10
 
         ScrollView:
-            id: instruct_scroll
+            id: scroll
             do_scroll_x: False
             do_scroll_y: True
             scroll_type: ['bars', 'content']
@@ -19,25 +19,37 @@
             MDGridLayout:
                 cols: 1
                 adaptive_height: True
+                spacing: 10
 
                 MDLabel:
-                    text: root.instruction_msg
+                    text: root.title
+                    font_style: 'H3'
+                    size_hint_y: None
+
+                MDLabel:
+                    text: root.msg
                     markup: True
-                    text_size: root.width, None
                     font_size: sp(24)
                     size: self.texture_size
                     size_hint_y: None
-                    padding: 10, 10
-                    halign: 'center'
+                    padding_x: 10
+                    halign: 'justify'
                     valign: 'top'
 
                 Image:
-                    id: CT_instruct_img
+                    id: instruct_img
                     source: 'res/CT_1task_trial.png'
                     allow_stretch: False
                     keep_ratio: True
                     size: self.texture_size
                     size_hint: (1, None)
+
+                MDLabel:
+                    text: _("When you are ready to begin press [b]{}[/b].").format(_("Start"))
+                    markup: True
+                    font_size: sp(24)
+                    size_hint_y: None
+                    halign: 'center'
 
         MDSeparator:
 
