--- a/src/widgets/popups.kv
+++ b/src/widgets/popups.kv
@@ -12,6 +12,7 @@
         scroll_type: ['bars', 'content']
 
         MDLabel:
+            id: label
             text: root.text
             markup: True
             halign: "justify"
