--- a/src/widgets/screensgeneral.kv
+++ b/src/widgets/screensgeneral.kv
@@ -109,7 +109,7 @@
                         icon: 'email-send'
                         text: _("Send via E-Mail")
                         disabled: not app.settings.is_email_enabled
-                        on_release: app.data_mgr.send_email(app.settings.email_recipient)
+                        on_release: app.data_mgr.send_email(getattr(app.settings, app.settings.current_task.lower().replace(" ", "_")).email_recipient)
                 AnchorLayout:
                     anchors: 'center', 'center'
                     MDRectangleFlatIconButton:
