also open terms on first run when language isn't changed

--- a/src/widgets/popups.kv
+++ b/src/widgets/popups.kv
@@ -45,7 +45,7 @@
 <-UserInput>
     orientation: "vertical"
     padding: "10dp"
-
+    # FixMe: Text overlapped by hint_text of text input on Android.
     MDLabel:
         text: _("This name is just for you. It won't be uploaded to the server.")
         font_style: 'Caption'
